--- a/index.html
+++ b/index.html
@@ -3,95 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Tejas Pathare - Digital Resume</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <h1 class="logo">Tejas Pathare</h1>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+    <div class="container my-5">
+        <div class="col-md-3 text-center">
+            <img src="Tejas Image.jpeg" alt="Your Name" class="img-fluid rounded-circle shadow-sm">
         </div>
-    </header>
 
-    <main>
-        <!-- About Section -->
-        <section id="about" class="section about">
-            <div class="container">
-                <h2>About Me</h2>
-                <div class="about-content">
-                    <img src="Tejas Image.jpeg" alt="Tejas Pathare" class="profile-photo">
-                    <p>Hi! I'm <strong>Tejas Pathare</strong>, a web developer with a passion for creating modern and responsive websites. I love solving problems and bringing ideas to life through clean code and design.
-                        I am a recent graduate with a passion for software development and a keen interest in contributing to innovative 
-                        projects. My academic background and hands-on experience with programming languages such as Java, SQL, HTML, and 
-                        CSS have equipped me with a solid foundation in coding and problem-solving. I am eager to apply my skills in a 
-                        dynamic work environment and grow as a professional developer.</p>
-                </div>
-            </div>
+        <!-- Header Section -->
+        <div class="text-center mb-4">
+            <h1>Tejas Pathare</h1>
+            <p>Pune, Maharashtra</p>
+            <p>
+                <a href="tel:+919767512879">+91-9767512879</a> | 
+                <a href="mailto:pathare3232tejas@gmail.com">pathare3232tejas@gmail.com</a> |
+                <a href="https://www.linkedin.com/in/TejasPathare/" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/TejasPathare1712" target="_blank">GitHub</a>
+            </p>
+        </div>
+
+        <!-- Summary Section -->
+        <section class="mb-4">
+            <h2 class="text-primary">Summary</h2>
+            <p>
+                I am a recent graduate with a passion for software development and a keen interest in contributing to innovative projects. 
+                My academic background and hands-on experience with Java, SQL, HTML, and CSS have equipped me with a solid foundation 
+                in coding and problem-solving. I am eager to apply my skills in a dynamic work environment and grow as a professional developer.
+            </p>
         </section>
-        
 
-        <!-- Projects Section -->
-        <section id="projects" class="section projects">
-            <div class="container">
-                <h2>Projects</h2>
-                <div class="grid">
-                    <div class="project-card">
-                        <h3>Pest Identification System</h3>
-                        <p>Description: Developed a machine learning system to classify pests, helping farmers with pest management and 
-                            decision-making. </p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Library Management System (Java + SQL)</h3>
-                        <p>Description: Designed and implemented a library management application using Java for the backend and SQL for 
-                            database management to handle book in ventories, member details, and issue/return tracking </p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                    <div class="project-card">
-                        <h3> Personal Portfolio Website (HTML + CSS)</h3>
-                        <p> Description: Created a responsive personal portfolio website using HTML and CSS to showcase projects, skills, and 
-                            achievements with a user-friendly interface.</p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
-            </div>
+        <!-- Education Section -->
+        <section class="mb-4">
+            <h2 class="text-primary">Education</h2>
+            <ul>
+                <li><strong>AISSMS IOIT</strong> | BE-COMP | 2024 | 74%</li>
+                <li><strong>Sant Saviours Junior and High School</strong> | HSC | 2020 | 72%</li>
+                <li><strong>Shri Chhatrapati Shivaji Vidyalaya Ghogargaon</strong> | SSC | 2018 | 81.8%</li>
+            </ul>
         </section>
 
         <!-- Skills Section -->
-        <section id="skills" class="section skills">
-            <div class="container">
-                <h2>Skills</h2>
-                <div class="skills-grid">
-                    <div class="skill">HTML</div>
-                    <div class="skill">CSS</div>
-                    <div class="skill">Java</div>
-                    <div class="skill">SQL</div>
-                </div>
-            </div>
+        <section class="mb-4">
+            <h2 class="text-primary">Skills</h2>
+            <ul>
+                <li>Programming Languages: Java, Python</li>
+                <li>Object-Oriented Programming (OOP)</li>
+                <li>Web Development: HTML, CSS</li>
+                <li>Database Management: SQL, MySQL, Oracle</li>
+                <li>Version Control: Git, SVN</li>
+            </ul>
         </section>
 
-        <!-- Contact Section -->
-        <section id="contact" class="section contact">
-            <div class="container">
-                <h2>Contact</h2>
-                <p>I'd love to hear from you! Reach out to me for collaboration or just to say hello.</p>
-                <a href="mailto:your.email@example.com" class="btn">Email Me</a>
-            </div>
+        <!-- Projects Section -->
+        <section class="mb-4">
+            <h2 class="text-primary">Projects</h2>
+            <ul>
+                <li>
+                    <strong>Pest Identification System</strong> | Feb 2024<br>
+                    Developed a machine learning system to classify pests, helping farmers with pest management and decision-making.<br>
+                    <a href="https://github.com/BE-Final-Year-Project/pest_Identification" target="_blank">GitHub Link</a>
+                </li>
+                <li>
+                    <strong>Library Management System (Java + SQL)</strong> | April 2024<br>
+                    Designed and implemented a library management application to handle book inventories, member details, and issue/return tracking.<br>
+                    <a href="https://github.com/TejasPathare1712/library-management" target="_blank">GitHub Link</a>
+                </li>
+                <li>
+                    <strong>Personal Portfolio Website (HTML + CSS)</strong> | June 2024<br>
+                    Created a responsive personal portfolio website to showcase projects, skills, and achievements.<br>
+                    <a href="https://github.com/TejasPathare1712/portfolio-website" target="_blank">GitHub Link</a>
+                </li>
+            </ul>
         </section>
-    </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 Your Name. Built with 💻 and 💙.</p>
-        </div>
-    </footer>
+        <!-- Certifications Section -->
+        <section class="mb-4">
+            <h2 class="text-primary">Certifications</h2>
+            <ul>
+                <li>
+                    Fullstack certification from Unique Systems Skill (INDIA) Pvt. Ltd, Pune<br>
+                    <a href="https://github.com/TejasPathare1712/fullstack-certification" target="_blank">GitHub Link</a>
+                </li>
+                <li>
+                    Java Full Stack Developer - Symbiosis Center of Distance Learning<br>
+                    <a href="https://github.com/TejasPathare1712/java-fullstack-certification" target="_blank">GitHub Link</a>
+                </li>
+                <li>
+                    HTML & CSS - LinkedIn<br>
+                    <a href="https://github.com/TejasPathare1712/html-css-certification" target="_blank">GitHub Link</a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Interests Section -->
+        <section class="mb-4">
+            <h2 class="text-primary">Interests</h2>
+            <ul>
+                <li>Reading Books</li>
+                <li>Chess</li>
+                <li>Continuous Learning</li>
+                <li>Table Tennis</li>
+            </ul>
+        </section>
+
+        <!-- Languages Section -->
+        <section class="mb-4">
+            <h2 class="text-primary">Languages</h2>
+            <ul>
+                <li>English (Fluent)</li>
+                <li>Hindi (Fluent)</li>
+                <li>Marathi (Native)</li>
+                <li>Japanese (Basic)</li>
+            </ul>
+        </section>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
