--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </li>
                 <li>
                     HTML & CSS - LinkedIn<br>
-                    <a href="https://github.com/TejasPathare1712/html-css-certification" target="_blank">GitHub Link</a>
+                    <a href="https://www.linkedin.com/learning/certificates/1acfc1959753f0056228e8e1f61601c152bfe28ead57ccb19dc02ec0e85bf5f1" target="_blank">GitHub Link</a>
                 </li>
             </ul>
         </section>
