--- a/index.html
+++ b/index.html
@@ -66,14 +66,9 @@
                     <a href="https://github.com/BE-Final-Year-Project/pest_Identification" target="_blank">GitHub Link</a>
                 </li>
                 <li>
-                    <strong>Library Management System (Java + SQL)</strong> | April 2024<br>
-                    Designed and implemented a library management application to handle book inventories, member details, and issue/return tracking.<br>
-                    <a href="https://github.com/TejasPathare1712/library-management" target="_blank">GitHub Link</a>
-                </li>
-                <li>
                     <strong>Personal Portfolio Website (HTML + CSS)</strong> | June 2024<br>
                     Created a responsive personal portfolio website to showcase projects, skills, and achievements.<br>
-                    <a href="https://github.com/TejasPathare1712/portfolio-website" target="_blank">GitHub Link</a>
+                    <a href="https://tejaspathare1712.github.io/FirstWebsite/" target="_blank">GitHub Link</a>
                 </li>
             </ul>
         </section>
