some list is added

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                 <li>Chess</li>
                 <li>Continuous Learning</li>
                 <li>Table Tennis</li>
+                <li>Badminton</li>
+                <li>Cricket </li>
             </ul>
         </section>
 
